--- a/src/sass/scss/planner/edit.scss
+++ b/src/sass/scss/planner/edit.scss
@@ -58,6 +58,7 @@
   .flex .edit-wrapper {
     width: 100%;
     max-width: 500px;
+    overflow-y: scroll;
   }
 
   .description {
